# EVM-for-CCF

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  api.html  azure-pipelines-gh-pages.yml  azure-pipelines.yml  demos.html  genindex.html  implementation.html  index.html  introduction.html  objects.inv  rpcinterface.html  search.html  searchindex.js
_static/: pygments.css
cmake/: evm4ccf.app.cmake  evm4ccf.tests.cmake
include/: ethereum_transaction.h  rpc_types.h  rpc_types_serialization.inl
samples/: erc20_deploy_and_transfer.py  provider.py  utils.py
sphinx/: Makefile  requirements.txt
sphinx/source/: api.rst  conf.py  demos.rst  implementation.rst  index.rst  introduction.rst  rpcinterface.rst
src/app/: account_proxy.h  ethereum_state.h  evm_for_ccf.cpp  msgpacktypes.h  nljsontypes.h  tables.h
tests/: erc20_transfers_scenario.json  eth_call.cpp  eth_sendTransaction.cpp  eth_signature.cpp  event_logs.cpp  kv_conversions.cpp  requirements.txt  shared.cpp  shared.h  signed_transactions.cpp  tests.sh
tests/contracts/: Ballot.sol  Ballot_combined.json  Call1.sol  Call1_combined.json  Call2.sol  Call2_combined.json  ERC20.sol  ERC20_combined.json  Events.sol  Events_combined.json  SimpleStore.sol  SimpleStore_combined.json  compile.sh
